
Removed the parameter 'fun' of getBaseline(). The old method supported both the process name 'proc' and the function name 'fun' when specifying which process to get data from, but the new method only use one parameter 'proc'. The function now searces for a match in process name, and then in function name, picking the first process in the case of multiple matches, with a warning.

Removed the old functions bootstrapBioticAcoustic() and bootstrapBioticSweptArea().

Added the function wkt_MULTIPOLYGON(), adding support for lists of two column polygon matrices in polyArea().

Fixed bug in baseline2eca().


########## Version 1.6.2 (2017-08-23) ##########

Fixed bug with AreaMethod="accurate" in the process StratumArea, which had no effect when run from Rstox.

Added the function varianceEstimation(), which implements the variance estimation of Jolly, G. M., & Hampton, I. (1990). A stratified random transect design for acoustic surveys of fish stocks. Canadian Journal of Fisheries and Aquatic Sciences, 47(7), 1282-1291.

Re-introduced the defaults acousticMethod=PSU~Stratum, bioticMethod=PSU~Stratum in runBootstrap().

Changed the function readBaselineParameters() to parse the project.XML file.

Added the parameter 'model' in readXMLfiles(), allowing for specifying additional processing of the data read from XML files. A simple example is readXMLfiles(AcousticXMLfiles, model=list(NASC=list(AcousticData="Process(ReadAcousticXML)"))), which for acoustic XML files also calculates the NASC values.

Added the function addProcesses(), which adds processes to a project object given a list of parameter specifications as returned by getParlist().

Simplified how custom models are implemented in createProject(), which now first runs addProcesses() and then setBaselineParameters(). 
