@@ -86,7 +86,6 @@ import(graphics)
 import(rgdal)
 import(stats)
 import(utils)
-importFrom(MASS,fitdistr)
 importFrom(XML,getNodeSet)
 importFrom(XML,xmlDoc)
 importFrom(XML,xmlGetAttr)
@@ -110,5 +109,7 @@ importFrom(sp,CRS)
 importFrom(sp,proj4string)
 importFrom(sp,spTransform)
 importFrom(stats,as.formula)
+importFrom(stats,density)
 importFrom(stats,terms)
 importFrom(tools,file_path_sans_ext)
+importFrom(utils,tail)
