@@ -1,4 +1,4 @@
-# Rstox version: 1.6.2 (latest alpha, 2017-09-04)
+# Rstox version: 1.6.2 (latest alpha, 2017-09-08)
 # R version: 3.3.3
 
 # The package Rstox contains most of the functionality of the stock assesment utility StoX, which is an open source approach to acoustic and swept area survey calculations. Download Rstox from ftp://ftp.imr.no/StoX/Download/Rstox or install by running the following commands in R:
@@ -49,3 +49,4 @@ install.packages("ftp://ftp.imr.no/StoX/Download/Rstox/Versions/Alpha/Rstox_1.6.
 
 # 7. Simplified how custom models are implemented in createProject(), which now first runs addProcesses() and then setBaselineParameters(). 
 
+# 8. Renamed the object currentParameters in the project environment to javaParameters, to stress that these are the current parameter values in the project Java object. The object lastParameters is the parameters used during the last baseline run, which do not have to be identical to the javaParameters, in case the parameter values in Java were reset to the previous parameter values.
